<resources>
    <string name="app_name">TradersDiary</string>
    <string name="posistion_size">Position size</string>
    <string name="position_note">Position note</string>
    <string name="observation">Observation</string>
    <string name="account_size">Account size</string>
    <string name="risk">Your risk in %</string>
    <string name="atr_13">ATR (13)</string>
    <string name="rational_stop_loss_sl">Rational Stop Loss (SL)</string>
    <string name="value_of_1_tic">Value of 1 tic</string>
    <string name="your_sl_in_ticks">Your SL (in ticks)</string>
    <string name="your_position_size">Your position size</string>
    <string name="calculating">calculating</string>
    <string name="contracts">contracts</string>
    <string name="points">points</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
